<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerLabel"
            android:textSize="20sp"
            />

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gasolina"
                />
        <EditText android:id="@+id/valor_gasolina"
                  android:numeric="decimal"
                  android:inputType="numberDecimal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hintEditTExt"
                />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/etanol"
                />
        <EditText android:id="@+id/valor_etanol"
                  android:numeric="decimal"
                  android:inputType="numberDecimal"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hintEditTExt" />
    </LinearLayout>

    <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular"
            android:onClick="calcular"/>

</LinearLayout>

